<resources>
    <string name="app_name">Space Explorer</string>
    <string name="apod_tab">APOD</string>
    <string name="home_tab">Home</string>
    <string name="rover_tab">Rover</string>
    <string name="add_image_button">Add Image</string>
    <string name="select_date">Select a Date</string>
    <string name="rover_prompt">Select a Rover</string>
    <string name="select_rover_button">Select Rover</string>
    <string name="camera_prompt">Select a Camera</string>
    <string name="select_camera_button">Select Camera</string>
    <string name="rover_no_rover_selected_response">Please select a Rover before selecting a Camera</string>
    <string name="submit_button">Submit</string>
    <string name="add_fab_description">Add new item to page</string>
    <string name="rover_img_description_placeholder">Mars Rover Image (placeholder)</string>
    <string name="apod_img_description_placeholder">Astronomy Picture of the Day (placeholder)</string>
    <string name="home_welcome_message_first">Welcome to Space Explorer!</string>
    <string name="home_welcome_back_message">Welcome back to Space Explorer!</string>
    <string name="app_intro">Welcome to Space Explorer! Here you have unlimited access to browse Nasa\'s Astronomy Picture of the Day (APOD) and Mars Rover image library. To get started, simply selected one of the tabs at the top. To search for an APOD, simply select a day and it will pop up. To search the Mars Rover, you can select between 3 different Rovers, each with their own set of Cameras to choose from.</string>
    <string name="rover_carousel_heading">Rovers</string>
    <string name="apod_carousel_heading">APODs</string>
    <string name="carousel_image_placeholder">This is an image in the carousel</string>
    <string name="apod_title_detail">Title</string>
    <string name="sol_display_title">Sol</string>
    <string name="earth_date_display_title">Earth Date</string>
    <string name="cam_name_display_title">Camera Name</string>
    <string name="cam_short_name_display_title">Camera Short Name</string>
    <string name="rover_name_display_title">Rover Name</string>
    <string name="rover_landing_date_display_title">Landing Date</string>
    <string name="rover_launch_date_display_title">Launch Date</string>
    <string name="rover_status_display_title">Status</string>
    <string name="rover_display_camera_name">%s (%s)</string>
    <string name="apod_description_heading">Image Explanation</string>
    <string name="apod_display_service_version">Service Version</string>
    <string name="apod_copyright_heading">Copyright</string>
    <string name="btn_return_apod">Return to APODs</string>
    <string name="btn_return_rover">Return to Rovers</string>

    <string-array name="rover_options">
        <item>Curiosity</item>
        <item>Opportunity</item>
        <item>Spirit</item>
    </string-array>

    <string-array name="curiosity_rover_cameras">
        <item>Front Hazard Avoidance Camera</item>
        <item>Rear Hazard Avoidance Camera</item>
        <item>Mast Camera</item>
        <item>Chemistry and Camera Complex</item>
        <item>Mars Hand Lens Imager</item>
        <item>Mars Descent Imager</item>
        <item>Navigation Camera</item>
    </string-array>

    <string-array name="opportunity_spirit_rover_cameras">
        <item>Front Hazard Avoidance Camera</item>
        <item>Rear Hazard Avoidance Camera</item>
        <item>Navigation Camera</item>
        <item>Panoramic Camera</item>
        <item>Miniature Thermal Emission Spectrometer (Mini-TES)</item>
    </string-array>

    <string-array name="empty_array"/>

</resources>