<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".apod.fragments.NewApodFragment"
    android:paddingHorizontal="@dimen/general_margin">

    <TextView
        android:id="@+id/select_rover_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/light_heading"
        android:text="@string/rover_prompt" />

    <Button
        android:id="@+id/new_rover_rover"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/select_rover_header"
        style="@style/light_button"
        android:text="@string/select_rover_button"/>

    <TextView
        android:id="@+id/select_camera_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_rover_rover"
        style="@style/light_heading"
        android:text="@string/select_camera_button" />

    <Button
        android:id="@+id/new_rover_camera"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/select_camera_header"
        style="@style/light_button"
        android:text="@string/select_date"/>

    <TextView
        android:id="@+id/select_date_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_rover_camera"
        style="@style/light_heading"
        android:text="@string/select_date" />

    <Button
        android:id="@+id/new_rover_date"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/select_date_header"
        style="@style/light_button"
        android:text="@string/select_date"/>

    <Button
        android:id="@+id/rover_submit_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/light_button"
        android:enabled="false"
        android:text="@string/submit_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>