<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apod.fragments.ApodDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/apod_display_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/heading_light" />

        <TextView
            android:id="@+id/apod_display_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/heading_light"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">
            <ImageView
                android:id="@+id/apod_display_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/apod_img_description_placeholder"
                style="@style/img_detail" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/apod_misc_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                style="@style/rover_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/general_margin">

                    <TextView
                        android:id="@+id/copyright_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/card_heading"
                        android:text="@string/apod_copyright_heading"/>

                    <View
                        android:id="@+id/sol_spacing"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        style="@style/card_spacer"
                        app:layout_constraintTop_toBottomOf="@id/copyright_heading"
                        app:layout_constraintBottom_toTopOf="@id/apod_display_copyright" />

                    <TextView
                        android:id="@+id/apod_display_copyright"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/card_data"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                style="@style/rover_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/general_margin">

                    <TextView
                        android:id="@+id/service_version_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/card_heading"
                        android:text="@string/apod_display_service_version"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        style="@style/card_spacer"
                        app:layout_constraintTop_toBottomOf="@id/service_version_heading"
                        app:layout_constraintBottom_toTopOf="@id/apod_display_service_version" />

                    <TextView
                        android:id="@+id/apod_display_service_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/card_data"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/rover_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/general_margin">

                <TextView
                    android:id="@+id/apod_description_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/card_heading"
                    android:text="@string/apod_description_heading"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    style="@style/card_spacer"
                    app:layout_constraintTop_toBottomOf="@id/apod_description_heading"
                    app:layout_constraintBottom_toTopOf="@id/apod_display_description"/>

                <TextView
                    android:id="@+id/apod_display_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/card_data"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apod_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btn_main"
            android:text="@string/btn_return_apod"/>

    </LinearLayout>

</ScrollView>