<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingBottom="40dp"
        android:padding="@dimen/general_margin">

        <TextView
            android:id="@+id/rover_display_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/heading_light" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">
            <ImageView
                android:id="@+id/rover_display_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rover_img_description_placeholder"
                style="@style/img_detail" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rover_misc_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                style="@style/rover_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/general_margin">

                    <TextView
                        android:id="@+id/rover_sol_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/card_heading"
                        android:text="@string/sol_display_title"/>

                    <View
                        android:id="@+id/sol_spacing"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        style="@style/card_spacer"
                        app:layout_constraintTop_toBottomOf="@id/rover_sol_heading"
                        app:layout_constraintBottom_toTopOf="@id/rover_display_sol" />

                    <TextView
                        android:id="@+id/rover_display_sol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/card_data"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                style="@style/rover_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/general_margin">

                    <TextView
                        android:id="@+id/rover_date_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/card_heading"
                        android:text="@string/earth_date_display_title"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        style="@style/card_spacer"
                        app:layout_constraintTop_toBottomOf="@id/rover_date_heading"
                        app:layout_constraintBottom_toTopOf="@id/rover_display_date" />

                    <TextView
                        android:id="@+id/rover_display_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/card_data"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            style="@style/rover_card">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/general_margin">

                <TextView
                    android:id="@+id/rover_camera_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/card_heading"
                    android:text="@string/cam_name_display_title"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    style="@style/card_spacer"
                    app:layout_constraintTop_toBottomOf="@id/rover_camera_heading"
                    app:layout_constraintBottom_toTopOf="@id/rover_display_camera_name"/>

                <TextView
                    android:id="@+id/rover_display_camera_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/card_data"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/rover_rover_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                style="@style/rover_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/general_margin">

                    <TextView
                        android:id="@+id/rover_name_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/card_heading"
                        android:text="@string/rover_name_display_title"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        style="@style/card_spacer"
                        app:layout_constraintTop_toBottomOf="@id/rover_name_heading"
                        app:layout_constraintBottom_toTopOf="@id/rover_display_name" />

                    <TextView
                        android:id="@+id/rover_display_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/card_data"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                style="@style/rover_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/general_margin">

                    <TextView
                        android:id="@+id/rover_status_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/card_heading"
                        android:text="@string/rover_status_display_title"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        style="@style/card_spacer"
                        app:layout_constraintTop_toBottomOf="@id/rover_status_heading"
                        app:layout_constraintBottom_toTopOf="@id/rover_display_status" />

                    <TextView
                        android:id="@+id/rover_display_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/card_data"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rover_rover_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                style="@style/rover_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/general_margin">

                    <TextView
                        android:id="@+id/rover_launch_date_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/card_heading"
                        android:text="@string/rover_launch_date_display_title"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        style="@style/card_spacer"
                        app:layout_constraintTop_toBottomOf="@id/rover_launch_date_heading"
                        app:layout_constraintBottom_toTopOf="@id/rover_display_launch_date" />

                    <TextView
                        android:id="@+id/rover_display_launch_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/card_data"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                style="@style/rover_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/general_margin">

                    <TextView
                        android:id="@+id/rover_landing_date_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/card_heading"
                        android:text="@string/rover_landing_date_display_title"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        style="@style/card_spacer"
                        app:layout_constraintTop_toBottomOf="@id/rover_landing_date_heading"
                        app:layout_constraintBottom_toTopOf="@id/rover_display_landing_date" />

                    <TextView
                        android:id="@+id/rover_display_landing_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/card_data"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_rover_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btn_main"
            android:text="Return to Rovers"/>

    </LinearLayout>

</ScrollView>
